added progress monitor api in the reference guide
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@168391 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/tutorials/HTML_Progress/part3-reference.pkg.ini
+++ b/tutorials/HTML_Progress/part3-reference.pkg.ini
@@ -60,3 +60,16 @@ ui.getscript
 ui.setscript
 ui.getstyle
 ui.drawcirclesegments
+monitor.notify
+monitor.setprogresshandler
+monitor.callprogresshandler
+monitor.isstarted
+monitor.iscanceled
+monitor.run
+monitor.setprogresselement
+monitor.getprogresselement
+monitor.getstyle
+monitor.getscript
+monitor.tohtml
+monitor.accept
+monitor.setcaption
